potential fix for carrot sizing on safari

--- a/src/components/scrollToTop/ScrollToTop.module.css
+++ b/src/components/scrollToTop/ScrollToTop.module.css
@@ -7,15 +7,15 @@
   border: 2px solid #05204a;
   border-radius: 50%;
   opacity: 0;
-  width: 50px;
-  height: 50px;
+  width: 3rem;
+  height: 3rem;
   pointer-events: none;
   transition: all 150ms;
 }
 
 .scrollToTopContainer>img {
-  width: 25px;
-  height: 25px;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 @media (hover: hover) and (pointer: fine) {
